<resources>
    <string name="app_name">COVID19 Tracker</string>

    <!-- Buttons on main activity -->
    <string name="button_logSymptoms">Log Symptoms</string>
    <string name="button_findPeople">Find People Near Me</string>
    <string name="button_viewLog">View/Edit Log</string>
    <string name="button_viewMap">View Map</string>
    <string name="button_loginOrCreateAccount">Login / Sign Up</string>

    <!-- Side activity titles -->
    <string name="title_logSymptoms">Log Symptoms</string>

    <!-- Symptoms -->
    <string name="symptom_cough">Cough</string>
    <string name="symptom_sniffles">Sniffles</string>
    <string name="symptom_sore_throat">Sore Throat</string>
    <string name="symptom_muscle_aches">Muscle Aches</string>
    <string name="symptom_fever">Fever</string>
    <string name="symptom_difficulty_breathing">Difficulty Breathing</string>
    <string name="submit_symptom_button">Submit</string>

    <!-- Login/sign up page Stuff -->
    <string name="Login_button">Login</string>
    <string name="Create_new_account">Create New Account</string>
    <string name="About_Us">About Us</string>

    <!-- Login page-->
    <string name="Back_button">Back</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Forgot_password">Forgot password</string>

    <!-- Create account page-->
    <string name="CA_Username">Username (8 Letters Only)</string>
    <string name="Create_Account">Create Account</string>
    <string name="Confirm_Password">Confirm Password</string>

    <string name="user_information">User Information</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
</resources>
