<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogSymptomsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/title_logSymptoms"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="356dp"
        android:layout_height="314dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom_cough"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:hapticFeedbackEnabled="true"
                android:indeterminate="true"
                android:max="10"
                android:progress="1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom_sniffles"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar2"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:hapticFeedbackEnabled="true"
                android:indeterminate="true"
                android:max="10"
                android:progress="3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom_sore_throat"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar3"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:hapticFeedbackEnabled="true"
                android:indeterminate="true"
                android:max="10"
                android:progress="3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom_muscle_aches"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar4"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:hapticFeedbackEnabled="true"
                android:indeterminate="true"
                android:max="10"
                android:progress="3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom_fever"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar5"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:hapticFeedbackEnabled="true"
                android:indeterminate="true"
                android:max="10"
                android:progress="3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom_difficulty_breathing"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar6"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:hapticFeedbackEnabled="true"
                android:indeterminate="true"
                android:max="10"
                android:progress="3" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/dateText"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LogSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>